Log Java version info on start; cleanups and a couple of Java 11 warning fixes, others will have to wait as replacements aren't in Java 8 or are warnings in stubs generated by Groovy, and then there's the finalized thing which will take a bit of work